test/org/midica/testfiles/failing/nestable-block-open-at-eof.midica
INCLUDE_FILE inc/instruments.midica

(
	0 c /4
	0 d /4
